# gold-shop-app

./: .ai-context.md  .cursorrules  .dockerignore  .gitignore  .lintstagedrc.json  0001-fix-quotes-restore-mobile-placeholders.patch  DEMO_VIDEO_PIPELINE.md  Dockerfile  GO_TO_MARKET_STRATEGY.md  Octaryn_Systems_Infinity_OS_Business_Strategy_2026.docx  Orivraa-PROJECT_OVERVIEW.txt  README.md  apply-labels.js  apply-labels.py  apply-labels2.py  check_gemini.js  check_gemini.ts  customer.tsx  docker-compose.yml  docker_history.txt  header.txt  logo-code.txt  mandala.txt  package.json  patch.js  plans.md  pnpm-lock.yaml  pnpm-workspace.yaml  profile-pompt.txt  quotes_diff.diff  railway.json  script.js  simulation-mirofish.md  stripe-docs.txt  svg.txt  temp_jsx.tsx  temp_old_create.tsx  update_labels.js
.github/: CODEOWNERS
apps/desktop/src-tauri/: Cargo.toml  desktop-enhancements.js  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  sync.rs
cloudflare-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
docs/: APP_ARCHITECTURE_AND_FEATURES.md  BILLING_SECURITY_NOTES.md  CI-CD-PIPELINE.md  GRAFANA-PROMETHEUS-SETUP.md  pricing-engine.md
docx-gen/: generate.js  package-lock.json
e2e/: auth-setup.ts  package.json  playwright.config.ts  record.ts  tsconfig.json
k6/: README.md  diagnostic.js  load.js  smoke.js  stress.js  user-journey.js
pipecat-agent/: Dockerfile  README.md  bot.py  env.example  pcc-deploy.toml  pyproject.toml
security/: package.json  (+6 more)
(+1061 files in other folders)
